syntax = "proto3";

service Showtime {
    rpc GetShowtimeByDate(ShowtimeDate) returns (ShowtimeData) {}
    rpc GetShowtimes(Empty) returns (stream ShowtimeData) {}
}

message ShowtimeDate {
    string date = 1;
}

message ShowtimeData {
    string date = 1;
    repeated MovieData movies = 2;
}

message MovieData {
    string movie = 1;
    int32 seats = 2;
}

message Empty {}
